#if (CMAKE_SYSTEM_NAME MATCHES "Linux")
  add_subdirectory(Linux)
#elseif (CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
  add_subdirectory(FreeBSD)
#elseif (CMAKE_SYSTEM_NAME MATCHES "Darwin")
  add_subdirectory(MacOSX)
#elseif (CMAKE_SYSTEM_NAME MATCHES "Windows")
  add_subdirectory(Windows)
#elseif (__ANDROID_NDK__)
  add_subdirectory(Android)
#endif()

add_subdirectory(POSIX)
add_subdirectory(gdb-server)
add_subdirectory(Kalimba)
