if (CMAKE_SYSTEM_NAME MATCHES "Linux" AND NOT ANDROID)
  add_subdirectory(Linux)
  add_subdirectory(POSIX)
elseif (CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
  add_subdirectory(FreeBSD)
  add_subdirectory(POSIX)
elseif (CMAKE_SYSTEM_NAME MATCHES "Windows")
  add_subdirectory(Windows)
elseif (CMAKE_SYSTEM_NAME MATCHES "Darwin")
  add_subdirectory(MacOSX-Kernel)
elseif (ANDROID)
  add_subdirectory(Android)  
  add_subdirectory(POSIX)  
endif()
add_subdirectory(gdb-remote)
add_subdirectory(Utility)
add_subdirectory(mach-core)
add_subdirectory(elf-core)
